--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -3,21 +3,21 @@ name: Continuous Integration
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3.5.3
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3.2.0
         with:
-          dotnet-version: 3.1.302
+          dotnet-version: 7
       - name: Install dependencies
         run: dotnet restore
       - name: Build release
