--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -23,4 +23,6 @@ jobs:
       - name: Build release
         run: dotnet build --configuration Release --no-restore
       - name: Test & Coverage
-        run: dotnet test --no-restore --collect:"XPlat Code Coverage" --settings ./build/coverage.runsettings -v n -r .build/
+        run:
+          dotnet test --no-restore --collect:"XPlat Code Coverage" --settings ./build/coverage.runsettings -v n
+          # dotnet test --no-restore --collect:"XPlat Code Coverage" --settings ./build/coverage.runsettings -v n -r .build/
