--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: dotnet restore
       - name: Build release
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release --no-restore -o .build
       - name: Test & Coverage
         run:
-          dotnet test --no-restore --collect:"XPlat Code Coverage" --settings ./build/coverage.runsettings -v n
+          dotnet test --no-restore --collect:"XPlat Code Coverage" --settings ./build/coverage.runsettings -v n -r .build/
           # dotnet test --no-restore --collect:"XPlat Code Coverage" --settings ./build/coverage.runsettings -v n -r .build/
